# mcfolio

./: LICENSE  README.md  pyproject.toml
src/mcfolio/: accounts.py  assets.py  constants.py  expr.py  operations.py  run.py  variables.py
